[project]
name = "cavro"
description = "avro codec implemented with Cython"
version = "0.2.0"
authors = [
    { name = "Steve Stagg", email = "ste@sta.gg" }
]
dependencies = [
    "numpy",
]
dynamic=["readme", "requires-python", "license", "classifiers"]

[project.optional-dependencies]
dev = [
    "avro-python3",
    "pytest",
    "tqd",
    "click",
]

[build-system]
requires = ["cython", "setuptools", "wheel"]